# Research-workbench

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/litsearch/: SKILL.md
app/: __init__.py  analysis.py  cli.py  tone.py
app/adapters/: __init__.py  base.py  clinicaltrials.py  conferences.py  crossref.py  europepmc.py  feeds.py  openalex.py  openfda.py  preprints.py  pubmed.py  registry.py  semantic_scholar.py
app/core/: config.py  http.py
app/models/: article.py
app/pipeline/: analysis.py  dedup.py  fulltext.py  rank.py  search.py
app/report/: renderer.py
app/report/templates/: report.html
app/target_intel/R/: 00_config.R  01_fetch_tcga.R  02_absolute_codel.R  02b_fetch_rnaseq.R  03_cn_expression.R  03b_fetch_maf.R  04_cooccurrence.R  04a_codeletion.R  04b_mtap_pop_mutations.R  05_chrom_context.R  06_validation_msk.R  07_render_dashboard.R  07_render_panel2.R  08_fetch_ctgov.R  09_panel3_clinical.R  10_render_panel3.R  11_render_panel4.R  12_render_dashboard.R  README.md  install_deps.R  qc_check.R
app/target_intel/data/: citations.yaml  panel2_mechanism.yaml  panel3_drugs.yaml  panel3_results.yaml  panel4_synthesis.yaml
app/target_intel/results/: 01_mtap_deletion_freq.parquet  02_cn_expression_per_cohort.parquet  03_cooccurrence_long.parquet  03a_codeletion_partners.parquet  03b_mutpop_long.parquet  04_focality_per_cohort.parquet  (+11 more)
tests/: conftest.py  test_cli.py  test_conferences.py  test_europepmc_parse.py  test_feeds.py  test_more_adapters_parse.py  test_pipeline.py  test_pubmed_parse.py  test_report.py
(+2 files in other folders)
